--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "gulp-postcss": "^6.2.0",
     "gulp-sourcemaps": "^2.1.1",
     "gulp-stylus": "^2.5.0",
+    "gulp-svg-sprites": "^4.1.2",
+    "gulp-svgo": "^1.5.4",
     "gulp-util": "^3.0.7",
     "gulp-wrap": "^0.13.0",
     "handlebars-layouts": "^3.1.4",
@@ -37,7 +39,7 @@
     "bootstrap": "^3.3.7",
     "caman-dist-only": "^4.1.3",
     "firebase": "^3.4.1",
-    "font-awesome": "^4.6.3",
+    "font-awesome": "^4.7.0",
     "handlebars": "^4.0.5",
     "jquery": "^3.1.1",
     "moment": "^2.17.1",
