--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp-eslint": "^3.0.1",
     "gulp-handlebars": "^4.0.0",
     "gulp-include": "^2.3.1",
+    "gulp-load-plugins": "^1.5.0",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.1.0",
     "gulp-postcss": "^6.2.0",
