--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "handlebars": "^4.0.5",
     "jquery": "^3.1.1",
     "moment": "^2.17.1",
-    "page": "^1.7.1"
+    "page": "^1.7.1",
+    "vanilla-lazyload": "^8.7.1"
   }
 }
