--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "firebase": "^3.4.1",
     "font-awesome": "^4.7.0",
     "handlebars": "^4.0.5",
+    "handlebars-helper": "0.0.12",
     "jquery": "^3.1.1",
     "moment": "^2.17.1",
     "page": "^1.7.1",
